<resources>
    <string name="app_name">트립파이</string>

    <string name="kakao_app_key">76ee6d4e877a1ea575ed4d478cc671db</string>

    <string name="connection_failed">연결에 실패했습니다.\n잠시 후 다시 시도해주세요.</string>

    <string name="detail_shared_title">오늘의 공용 여행비</string>

    <string name="money_unit">원</string>
    <string name="money_unit2">%s원</string>
    <string name="money_unit3">약 %s원</string>

    <string name="percent_unit">%s%%</string>

    <string name="text_shared">공용</string>
    <string name="text_personal">개인</string>

    <!-- login -->
    <string name="text_kakao_login">카카오 로그인</string>

    <!-- edit trip profile -->
    <string name="toolbar_edit_trip_profile">여행 프로필 편집</string>
    <string name="text_edit_notice">폴더 정보는 여행방을 만든 사람만 수정할 수 있습니다</string>
    <string name="text_title">타이틀</string>
    <string name="text_date">날짜</string>
    <string name="text_shared_budget">공용 예산</string>
    <string name="text_personal_budget">개인 예산</string>
    <string name="text_delete">삭제하기</string>
    <string name="text_edit">수정하기</string>
    <string name="room_delete">여행 삭제하기</string>
    <string name="room_out">여행 나가기</string>
    <!---->

    <!-- bottom_sheet_selected_date -->
    <string name="date_record_title">지출 기록하기</string>
    <string name="date_ready">준비</string>

    <!-- main -->
    <string name="travel_to_record">기록할 여행</string>
    <string name="a_trip">다녀온 여행</string>
    <string name="recording_trip_empty_data_title">여행을 계획해보세요!</string>
    <string name="recording_trip_empty_data_content">하단 버튼을 통해 첫 여행을 만들어\n효율적인 예산 관리를 시작해보세요!</string>
    <string name="recorded_trip_empty_data_content">다녀온 여행이 없습니다.</string>
    <string name="room_user_count_format">%s · %d명</string>
    <string name="main_title_format">%s님,\n여행을 기록해주세요</string>

    <!-- select room type -->
    <string name="tv_select_room_type_screen_title_format">%s님,\n누구와 여행을 떠나세요?</string>
    <string name="travel_together">함께 즐기는 여행</string>
    <string name="travel_alone">혼자 즐기는 여행</string>

    <!-- common -->
    <string name="create_trip">여행 만들기</string>
    <string name="traveling">여행중</string>
    <string name="start_end_date_format">%s - %s</string>
    <string name="next">다음</string>
    <string name="default_user_name">트리파이</string>
    <string name="modify">수정하기</string>
    <string name="yes">예</string>
    <string name="create_travel_room_success">여행이 추가되었습니다.</string>
    <string name="create_travel_room_fail">여행 항목을 추가하는데 실패했습니다. 잠시 후 다시 시도해주세요.</string>

    <!-- create room -->
    <string name="room_title_format">%s님,\n어떤 여행을 떠나세요?</string>
    <string name="room_title_hint">ex) 친구들과 여름 제주도</string>
    <string name="room_period_title_format">%s님,\n언제 여행을 떠나세요?</string>
    <string name="room_period_hint">여행 기간을 입력해주세요</string>
    <string name="room_shared_budget_title_format">%s님,\n이번 여행의 예산을 적어주세요</string>
    <string name="room_shared_budget_hint">공용 예산을 입력해주세요</string>

    <string name="room_input_shared_budget_title">공용으로 함께 사용할 예산</string>

    <!-- my page -->
    <string name="setting">설정</string>
    <string name="modification">수정</string>
    <string name="customer_service">고객센터</string>
    <string name="terms_of_use">이용약관</string>
    <string name="privacy_policy">개인정보처리방침</string>
    <string name="version_info">버전정보</string>
    <string name="version_text_format">현재 %s</string>
    <string name="logout">로그아웃</string>

    <!-- modify profile -->
    <string name="modify_profile">프로필 수정</string>
    <string name="success_edit_nickname_toast_message">닉네임 변경이 완료되었습니다</string>

    <!-- enter room -->
    <string name="invitation_code_title">초대 코드를 입력해주세요</string>
    <string name="invitation_code_hint">초대 코드 입력</string>
    <string name="enter_travel_room">여행 참여하기</string>

    <!-- error message -->
    <string name="request_fail">잠시 후 다시 시도해주세요.</string>
    <string name="network_disconnected_notice">네트워크 상태를 확인해주세요.</string>

    <!-- record_spend -->
    <string name="record_spend_title">지출 기록하기</string>
    <string name="spend_detail_hint">지출한 내용을 입력해주세요 (최대 10글자)</string>
    <string name="make_trip">여행 만들기</string>
    <string name="text_record_submit">기록하기</string>
    <string name="text_record_delete">삭제하기</string>
    <string name="text_record_modify">수정하기</string>

    <!-- time picker -->
    <string name="time_picker_title">시간 선택</string>
    <string name="text_complete">완료</string>

    <!-- statistics -->
    <string name="toolbar_statistics">지출 통계</string>
    <string name="total_budget">총 예산 %s원 중</string>
    <string name="current_spend">지출 했어요.</string>
    <string name="statistics_empty_data_content">지출 내역이 없어 통계를 만들 수 없습니다.</string>

    <!-- manage member -->
    <string name="travel_member_management">여행 친구 관리</string>
    <string name="manager">관리자</string>
    <string name="export">내보내기</string>
    <string name="invite_member">친구 초대하기</string>
    <string name="invite_member_request_fail">친구 초대 기능에 실패했습니다. 잠시 후 다시 시도해주세요.</string>

    <!-- out member notice dialog -->
    <string name="out_member_notice_text_format">%s님을 여행 폴더에서\n내보내시겠습니까?</string>

</resources>
