<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

        <TextView
            android:id="@+id/tv_room_shared_budget_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:textColor="@color/fill_grey_1"
            android:textSize="@dimen/text_size_20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="엄격한 관리자님,\n이번 여행의 예산을 적어주세요" />

        <TextView
            android:id="@+id/tv_edit_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/room_input_shared_budget_title"
            android:textColor="@color/fill_grey_1"
            android:textSize="@dimen/text_size_14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_room_shared_budget_title" />

        <com.nexters.travelbudget.utils.widget.TripEditText
            android:id="@+id/et_trip_shared_budget"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/room_shared_budget_hint"
            android:textSize="@dimen/text_size_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_edit_text_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money_unit"
            android:textColor="@color/fill_grey_1"
            android:textSize="16sp"
            android:inputType="numberDecimal"
            android:maxLength="9"
            android:textStyle="bold"
            android:layout_marginBottom="12dp"
            app:layout_constraintEnd_toEndOf="@id/et_trip_shared_budget"
            app:layout_constraintBottom_toBottomOf="@id/et_trip_shared_budget"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_create_trip"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/bg_next_btn_disable_type"
            android:text="@string/create_trip"
            android:textColor="@color/fill_grey_2"
            android:textSize="@dimen/text_size_16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:background="@drawable/bg_next_btn_disable_type"
            tools:textColor="@color/fill_grey_2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>