<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.nexters.travelbudget.ui.enter_room.EnterRoomViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="@dimen/toolbar_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackgroundBorderless"
                android:onClick="@{() -> vm.backScreen()}"
                android:src="@drawable/btn_back" />

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/tv_invitation_code_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/invitation_code_title"
            android:textColor="@color/fill_grey_1"
            android:textSize="@dimen/text_size_20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:text="초대 코드를 입력해주세요" />

        <com.nexters.travelbudget.utils.widget.TripEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/invitation_code_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:text="@={vm.invitationCode}"
            android:textSize="@dimen/text_size_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_invitation_code_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_enter_travel_room"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="28dp"
            android:background="@{vm.invitationCode.length() > 1 ? @drawable/bg_next_btn_enable_type : @drawable/bg_next_btn_disable_type}"
            android:enabled="@{vm.invitationCode.length() > 1}"
            android:text="@string/enter_travel_room"
            android:textColor="@{vm.invitationCode.length() > 1  ? @color/colorWhite : @color/fill_grey_2}"
            android:textSize="@dimen/text_size_16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            bind:singleClick="@{() -> vm.requestEnterTravelRoom()}"
            tools:background="@drawable/bg_next_btn_disable_type"
            tools:textColor="@color/fill_grey_2" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>